added formulas for EM, edited README

--- a/EM_gaussian_mixture.ipynb
+++ b/EM_gaussian_mixture.ipynb
@@ -143,11 +143,13 @@
    "source": [
     "# Simple class for plotting the data\n",
     "class Plotter:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, save_plot=False):\n",
     "        self.img_idx = 1\n",
+    "        self.save_plot = save_plot\n",
     "        \n",
-    "    def plot_clusters(self, X, mu_pred=None, labels=None, sigma_pred=None, save_plot=False):\n",
+    "    def plot_clusters(self, X, mu_pred=None, labels=None, sigma_pred=None):\n",
     "        plt.figure(figsize=(6, 6))\n",
+    "        # plt.rcParams.update({'font.size': 18})\n",
     "        x_min, x_max = 1.1, 5.5\n",
     "        y_min, y_max = 40, 100\n",
     "        \n",
@@ -182,7 +184,7 @@
     "    \n",
     "        plt.title('Old Faithful Geyser Data')\n",
     "\n",
-    "        if save_plot:\n",
+    "        if self.save_plot:\n",
     "            plt.savefig('out/EM_%03d.png' % self.img_idx)\n",
     "            self.img_idx += 1\n",
     "        else:\n",
@@ -198,8 +200,8 @@
    "outputs": [],
    "source": [
     "# Plot the raw data\n",
-    "plotter = Plotter()\n",
-    "plotter.plot_clusters(X, save_plot=True)"
+    "plotter = Plotter(save_plot=True)\n",
+    "plotter.plot_clusters(X)"
    ]
   },
   {
@@ -235,7 +237,7 @@
     "        labels = np.argmin(distances, axis=1)\n",
     "        \n",
     "        # Plot\n",
-    "        plotter.plot_clusters(X, mu_pred=mu_pred, labels=labels, save_plot=True)\n",
+    "        plotter.plot_clusters(X, mu_pred=mu_pred, labels=labels)\n",
     "        \n",
     "        # Calculate the objective\n",
     "        prev_obj = obj\n",
@@ -274,7 +276,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Expectation maximization for gaussian processes\n"
+    "### Expectation maximization for gaussian processes\n",
+    "\n",
+    "For each datum $n \\in [1, ..., N]$, the cluster identity $\\textbf{c}_n \\in \\{0, 1\\}^K$ (one hot encoded: $\\sum_k c_{nk} = 1$) is distributed as follows (with $\\pi \\in \\mathbb{R}_0^+$, $\\sum_k \\pi_{k} = 1$):\n",
+    "\n",
+    "\\begin{equation}\n",
+    "p(\\textbf{c}_n|\\pi) = \\prod_{k=1}^{K} \\pi_{k}^{c_{nk}} \\text{.}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Each datum $\\textbf{x}_n \\in \\mathbb{R}^D$ is drawn from one of $K$ Gaussian distributions, selected by $\\textbf{c}_n$ with probability\n",
+    "\n",
+    "\\begin{equation}\n",
+    "p(\\textbf{x}_n|\\textbf{c}_n, \\mu, \\Sigma) = \\prod_{k=1}^{K} \\mathcal{N}(\\textbf{x}_n; \\mu_k, \\Sigma_k)^{c_{nk}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "with $\\mu_k \\in \\mathbb{R}^D$; $\\Sigma_k \\in \\mathbb{R}^{D \\times D}, spd$.\n",
+    "\n",
+    "**E-Step:**\n",
+    "\n",
+    "Applying the Expectation-Step as done in *Pattern Recognition and Machine Learning (Bishop, 2006)* yields the objective, the Expected Completed-Data Log-Likelihood:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}_{p(c|x, \\pi, \\mu, \\Sigma)}[\\log{p(x, c|\\pi, \\mu, \\Sigma)}] = \\sum_{n=1}^N \\sum_{k=1}^K \\gamma_{nk} \\left(\\log{\\pi_k + \\mathcal{N}(x_n; \\mu_k, \\Sigma_k)}\\right)\n",
+    "\\end{equation}\n",
+    "\n",
+    "with\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\gamma_{nk} = \\frac{\\pi_k \\mathcal{N}(x_n; \\mu_k, \\Sigma_k)}{\\sum_{l=1}^K \\pi_l \\mathcal{N}(x_n; \\mu_l, \\Sigma_l)} \\text{.}\n",
+    "\\end{equation}\n",
+    "\n",
+    "**M-Step:**\n",
+    "\n",
+    "In the Maximization-Step $\\pi, \\mu, \\Sigma$ need to be maximized w.r.t. the objective, which yields:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\pi_k^* = \\frac{\\sum_n \\gamma_{nk}}{\\sum_{n,l} \\gamma_{nl}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mu_k^* = \\frac{\\sum_n \\gamma_{nk} x_n}{\\sum_{n} \\gamma_{nk}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\Sigma_k^* = \\frac{\\sum_n \\gamma_{nk} (x_n - \\mu_k)(x_n - \\mu_k)^T}{\\sum_{n} \\gamma_{nk}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "**Algorithm:**\n",
+    "\n",
+    "1. Initialize $\\pi, \\mu, \\Sigma$ ($\\mu$ from K-means clustering)\n",
+    "2. Repeat until convergence:\n",
+    "    - Evaluate $\\gamma$ and calculate the Expected-Complete Data Log-Likelihood (E-Step).\n",
+    "    - (Re-)estimate $\\pi, \\mu, \\Sigma$ (M-Step)."
    ]
   },
   {
@@ -312,7 +365,7 @@
     "        labels = np.argmax(gamma, axis=1)\n",
     "            \n",
     "        # Save the plot\n",
-    "        plotter.plot_clusters(X, mu_pred=mu_pred, labels=labels, sigma_pred=sigma_pred, save_plot=True)\n",
+    "        plotter.plot_clusters(X, mu_pred=mu_pred, labels=labels, sigma_pred=sigma_pred)\n",
     "\n",
     "        # Check for convergence\n",
     "        if np.abs(obj - prev_obj) < eps:\n",
@@ -341,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected complete-data log likelihood:\n",
+      "Expected Complete-Data Log-Likelihood:\n",
       "--------------------------------------\n",
       "-1130.959\n",
       "\n",
@@ -372,7 +425,7 @@
     }
    ],
    "source": [
-    "print('Expected complete-data log likelihood:')\n",
+    "print('Expected Complete-Data Log-Likelihood:')\n",
     "print('--------------------------------------')\n",
     "print('%.3f' % obj)\n",
     "print()\n",
