--- a/EM_gaussian_mixture.ipynb
+++ b/EM_gaussian_mixture.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import multivariate_normal as gauss\n",
     "from sklearn.metrics.pairwise import euclidean_distances as l2\n",
-    "%matplotlib inline"
+    "# %matplotlib inline"
    ]
   },
   {
